# Construct3

./: .gitignore  .gitmodules  LICENSE.md  README.md  dependency_manifest.json  download_dependency.cmd
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/Private/: Clock.cpp  File.cpp  Log.cpp  Pointer.cpp  RuntimeContext.cpp  System.cpp
Source/Core/Public/: Clock.h  Command.h  Core.h  File.h  Log.h  Namespace.h  Platform.h  Pointer.h  RuntimeContext.h  System.h
Source/Core/SharedInterface/: IEditor.h  IRender.h
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EngineLoader.cpp  EngineLoader.h  GLGameWindow.cpp  GLGameWindow.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
Source/Engine/: CMakeLists.txt
Source/Engine/Old/: Box2DIntegration.hpp  Collidable.hpp  ComponentId.hpp  Cursor.hpp  Drawable.hpp  Entity.hpp  EntityFactory.hpp  Game.hpp  InputHandler.hpp  InvisibleWall.hpp  Movable.hpp  PathPen.hpp  Player.hpp  Serializable.hpp
Source/Engine/Old/Private/: AllTypeId.cpp  Component.cpp  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Factory.cpp  Factory.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h
Source/Engine/Old/Public/: IComponent.h  IEngine.h  IEntity.h  IFactory.h  IUnknown.h
Source/Engine/Private/: Actor.cpp  Camera.cpp  CompileSFMT.c  Component.cpp  Engine.cpp  Entity.cpp  EntityManager.cpp  Factory.cpp  Game.cpp  Scene.cpp  Sprite.cpp
Source/Engine/Public/: Actor.h  Camera.h  Component.h  Controls.h  Engine.h  Entity.h  EntityManager.h  Event.h  Factory.h  Game.h  Scene.h  Sprite.h  TypeId.h
Source/Launcher/: CMakeLists.txt  Main.cpp
Source/OpenGL3Render/: CMakeLists.txt
Source/OpenGL3Render/Private/: CompileGlad.c  CompileNanovg.c  HUD.cpp  Mesh.cpp  Model.cpp  Render.cpp  SceneGraph.cpp  Shader.cpp  Viewport.cpp
Source/OpenGL3Render/Public/: HUD.h  Mesh.h  Model.h  Render.h  SceneGraph.h  Shader.h  Viewport.h
Source/Resource/: CMakeLists.txt
Source/Resource/Private/: File.cpp  Mesh.cpp  Resource.cpp
Source/Resource/Public/: File.h  Mesh.h  Resource.h
Source/__ModuleSkel/: CMakeLists.txt
