file(GLOB Launcher_PRIVATE_SOURCES *.cpp)
add_executable(Launcher ${Launcher_PRIVATE_SOURCES})
if(WIN32)
	set_target_properties(Launcher PROPERTIES WIN32_EXECUTABLE ON)
endif()
target_link_libraries(Launcher PRIVATE sdl)
target_link_libraries(Launcher PRIVATE Core)
target_link_libraries(Launcher PRIVATE OpenGL3Render)
target_link_libraries(Launcher PRIVATE Engine)
